alter order flow

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -75,6 +75,7 @@ var user = JSON.parse(obj);
 </script>
 </head>
 <body>
+<form method="post" action="" id="listform">
   <div class="panel admin-panel">
   	<header class="panel-head" ><strong> 用户中心</strong></header> 
   	<table>
@@ -99,6 +100,7 @@ var user = JSON.parse(obj);
     </div>
     
   </div>
+ </form>
 <script type="text/javascript">
 
 
