--- a/src/main/webapp/userOrderList.html
+++ b/src/main/webapp/userOrderList.html
@@ -100,7 +100,7 @@ function findMoreOrderByStatus(){
   	</table>
     	<ul >
     		<li style="float:left;padding:0.2em;"><a href="javaScript:findOrderByStatus('1')">待报价订单</a></li>
-    		<li style="float:left;padding:0.2em;"><a href="javaScript:findOrderByStatus('2')">待确认订单</a></li>
+    		<!-- <li style="float:left;padding:0.2em;"><a href="javaScript:findOrderByStatus('2')">待确认订单</a></li> -->
     		<li style="float:left;padding:0.2em;"><a href="javaScript:findOrderByStatus('3')">待发货订单</a></li>
     		<li style="float:left;padding:0.2em;"><a href="javaScript:findOrderByStatus('4')">待收货订单</a></li>
     		<li style="float:left;padding:0.2em;"><a href="javaScript:findOrderByStatus('5')">售后处理</a></li>
