--- a/src/main/webapp/userBill.html
+++ b/src/main/webapp/userBill.html
@@ -68,6 +68,7 @@ if(!payStatus){
 		sessionStorage.setItem("orderId",orderId);
 		sessionStorage.setItem("orderPrice",orderPrice);//订单价格
 		sessionStorage.setItem("orderStatus",6);//已完成订单状态
+		sessionStorage.setItem("bill",1);//账单处查看订单详情
 	 	window.location.href="./userOrderDetail.html"; 
 	}
 </script>
