--- a/src/main/webapp/userOrderDetail.html
+++ b/src/main/webapp/userOrderDetail.html
@@ -19,12 +19,13 @@
 	var orderId = sessionStorage.getItem("orderId");
 	var orderStatusName={"1":"待报价","2":"待确认","3":"待发货","4":"待收货","5":"售后处理中","6":"已完成"};
 	var orderStatus = sessionStorage.getItem("orderStatus");
-	var afterSaleStatusName={"1": "未受理","2": "处理中","3": "处理完成","4":"售后请求未通过"};
+	var afterSaleStatusName={"1": "发起申请","2": "同意申请","3": "拒绝申请"};
 	var pages=1;
 	var orderPrice = sessionStorage.getItem("orderPrice");
 	var lowPrice = sessionStorage.getItem("lowPrice");
 	var highPrice = sessionStorage.getItem("highPrice");
 	var obj = sessionStorage.getItem('user');//
+	var bill = sessionStorage.getItem('bill');//
 	var user=JSON.parse(obj);
     var message;//请求参数
     var eventName = {"1":"提交提单", "2":"报价", "3":"确认订单", "4":"发货", "5":"提交售后申请", "6":"售后处理完成", "7":"确认收货","8":"付款", "9":"取消售后申请"};
@@ -45,11 +46,28 @@
              	 data = data.list1;
                  if(data){
                 	 if(data.length==1){//如果只有一个订单项   删除就是取消订单
-                		 $("#order").append("<tr><td>"+data[0].goods_name+"</td><td>"+data[0].goods_low_price+"~"+data[0].goods_high_price+"</td><td>"+data[0].goods_amount+"</td><td>"+data[0].goods_real_price+"</td><td><input type='button' value='删除' onclick=\"cancelOrder()\"/></td></tr>");
+                		 $("#order").append("<tr><td><input style='display:none;' type='text' value='"+data[i].goods_id+"'/><input type='checkbox' value='"+data[0].id+"'/></td><td>"+data[0].goods_name+"</td><td>"+data[0].goods_low_price+"~"+data[0].goods_high_price+"</td><td><input type='number' disabled='true' min=0 max='"+data[0].goods_amount+"' value='"+data[0].goods_amount+"'/></td><td><input type='text' disabled='true' value='"+data[i].goods_real_price+"'/></td><td><input type='button' value='删除' onclick=\"cancelOrder()\"/></td></tr>");
                 	 }else{
                 		 for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
-                    		 $("#order").append("<tr><td>"+data[i].goods_name+"</td><td>"+data[i].goods_low_price+"~"+data[i].goods_high_price+"</td><td>"+data[i].goods_amount+"</td><td>"+data[i].goods_real_price+"</td><td><input type='button' value='删除' onclick=\"deleteGoods('"+data[i].id+"')\"/></td></tr>");
+                    		 $("#order").append("<tr><td><input style='display:none;' type='text' value='"+data[i].goods_id+"'/><input type='checkbox' value='"+data[i].id+"'/></td><td>"+data[i].goods_name+"</td><td>"+data[i].goods_low_price+"~"+data[i].goods_high_price+"</td><td><input type='number' disabled='true' min=0 max='"+data[i].goods_amount+"' value='"+data[i].goods_amount+"'/></td><td><input type='text' disabled='true' value='"+data[i].goods_real_price+"'/></td><td><input type='button' value='删除' onclick=\"deleteGoods('"+data[i].id+"')\"/></td></tr>");
                     	 }
+                	 }
+                	 if(orderStatus!=3){//订单项操作列处理
+               		    var tableTd = "td:eq(5),th:eq(5)";
+               		    $('#order tr').find(tableTd).hide();
+                	 }
+                	 if(orderStatus!=6||bill==1){//售后操作列隐藏
+                		 var tableTd = "td:eq(0),th:eq(0)";
+                		 $('#order tr').find(tableTd).hide();
+                	 }else{//售后操作  增加点击事件
+                		 $("#order tr:gt(0)").click(function () {
+                			if($(this).find('td:eq(0) input[type="checkbox"]').is(':checked')){
+                			 	$(this).find('td:eq(0) input[type="checkbox"]').prop('checked', false);
+                	 		}else{
+                	 			$(this).find('td:eq(0) input[type="checkbox"]').prop('checked', true);
+                	 		}
+                			$(this).find('td:eq(3) input[type="number"]').removeAttr("disabled");
+             		     });
                 	 }
 	                  $("#orderStatus").text(orderStatusName[orderStatus]);//更改订单状态
 	                  if(orderStatus!=1){
@@ -58,7 +76,6 @@
 	                  	$("#account").text("￥"+lowPrice+"~"+highPrice+"元");//更改订单金额
 	                  }
 	                  if(orderLogList){//订单日志信息
-	                	  //document.getElementById("orderLog").style.display ="block";
 	                	  for(var i=0;i<orderLogList.length;i++){//data.length是获取data的长度。for循环
 	                		  $("#log").append("<tr><td>"+eventName[parseInt(orderLogList[i].event)]+"</td><td>"+orderLogList[i].handle_time+"</td></tr>");    
 	                	  }
@@ -71,30 +88,6 @@
              }
          });
 	});
-	function confirmOrder(){//确认订单
-		if(confirm("是否确认订单？")){
-			message={
-					"status":3,//订单状态  待收货
-		            "id":orderId
-			};
-			$.ajax({//订单状态查找订单
-	          url: "/fresh/order/updateStatus.action",        //后台url
-	          data:JSON.stringify(message),
-	          type: "POST",                   //类型，POST或者GET
-	          dataType: 'json',              //数据返回类型，可以是xml、json等
-	          contentType:'application/json;charset=UTF-8',
-	          success: function (data) {      //成功，回调函数
-	          	if(data.result==1){
-	          		sessionStorage.setItem("orderStatus",3);
-	          		window.location.href="./userOrderList.html";
-	           	}
-	          },
-	          error: function (er) {          //失败，回调函数
-	              alert(er);
-	          }
-	      });
-		}
-	}
 	function cancelOrder(){//取消订单
 		if(confirm("是否取消订单？")){
 			message={
@@ -135,7 +128,6 @@
           	if(data){
           		$("#reason").val(data[0].after_sale_reason);//更改售后原因
              	$("#reason").attr("disabled",true);//更改售后原因不可编辑
-             	//data.prove_img.preview();
              	$("#upload").html("");
            		$("#dealWith").html("<strong><b>处理方式：</b><b>"+data.handle_way+"</b></strong>");//处理方式
            		$("#afterSaleStatus").html("<strong><b>售后状态：</b><b>"+afterSaleStatusName[data.handle_status]+"</b></strong>");//售后状态
@@ -214,14 +206,32 @@
                  data = data.list1;
                  if(data){
                 	 for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
-                         $("#order").append("<tr><td>"+data[i].goods_name+"</td><td>"+data[i].goods_low_price+"~"+data[i].goods_high_price+"</td><td>"+data[i].goods_amount+"</td><td>"+data[i].goods_real_price+"</td><td><input type='button' value='删除' onclick=\"deleteGoods('"+data[i].id+"')\"/></td></tr>");
-                     }
+                		 $("#order").append("<tr><td><input style='display:none;' type='text' value='"+data[i].goods_id+"'/><input type='checkbox' value='"+data[i].id+"'/></td><td>"+data[i].goods_name+"</td><td>"+data[i].goods_low_price+"~"+data[i].goods_high_price+"</td><td><input type='number' disabled='true' min=0 max='"+data[i].goods_amount+"' value='"+data[i].goods_amount+"'/></td><td><input type='text' disabled='true' value='"+data[i].goods_real_price+"'/></td><td><input type='button' value='删除' onclick=\"deleteGoods('"+data[i].id+"')\"/></td></tr>");
+                	 }
                      $("#orderStatus").text(orderStatusName[orderStatus]);//更改订单状态
                      if(orderStatus!=1){
                      	$("#account").text("￥"+orderPrice+"元");//更改订单金额
                      }else{
                      	$("#account").text("￥"+lowPrice+"~"+highPrice+"元");//更改订单金额
                      }
+                     if(orderStatus!=3){//订单项操作列处理
+                		    var tableTd = "td:eq(5),th:eq(5)";
+                		    $('#order tr').find(tableTd).hide();
+                 	 }
+                     if(orderStatus!=6||bill==1){//售后操作列隐藏
+                		 var tableTd = "td:eq(0),th:eq(0)";
+                		 $('#order tr').find(tableTd).hide();
+                	 }else{//售后操作  增加点击事件
+                		 $("#order tr:gt(0)").unbind();//解绑之前的点击事件
+                		 $("#order tr:gt(0)").click(function () {
+                			if($(this).find('td:eq(0) input[type="checkbox"]').is(':checked')){
+                			 	$(this).find('td:eq(0) input[type="checkbox"]').prop('checked', false);
+                	 		}else{
+                	 			$(this).find('td:eq(0) input[type="checkbox"]').prop('checked', true);
+                	 		}
+                			$(this).find('td:eq(3) input[type="number"]').removeAttr("disabled");
+             		     });
+                	 }
                  }
              },
              error: function (er) {          //失败，回调函数
@@ -281,54 +291,93 @@
 		 if(!confirm("确认提交售后信息?")){
 			 return;
 		 }
-			 var reason = $('#reason').val();
-			 message={                          //数据
-		                "after_sale": {
-							"after_sale_id": "",
-							"user_id":user.id,
-							"a_order_id": orderId,
-							"after_sale_reason": reason,
-							"handle_status": 1,
-							"handle_way": "",
-							"handle_person": "",
-							"handle_time": "",
-							"prove_img": ""
-						}
-		             },
-				 $.ajax({//添加售后
-			             url: "/fresh/after_sale/addAfter_sale.action",        //后台url
-			             data:JSON.stringify(message),
-			             type: "POST",                   //类型，POST或者GET
-			             dataType: 'json',              //数据返回类型，可以是xml、json等
-			             contentType:'application/json;charset=UTF-8',
-			             success: function (data) {      //成功，回调函数
-			             	if(data.result==1){
-			             		window.location.href="./userOrderList.html";
-			             	}
-			             },
-			             error: function (er) {          //失败，回调函数
-			                 alert(er);
-			                 //previewer.preview();
-			             }
-			         });
-		 }
+ 		//获取需要售后的商品
+ 		//"id": "cf2000fa-3b3f-4814-a59e-4363f5ae8f9d",
+		//"goods_id": "2",
+		//"order_id": "361d650ea-61fa-40a4-bc12-7c769cdd454e",
+		//"goods_amount": 2,
+		//"goods_real_price": 15
+ 		var param = {};
+		var list =new Array();
+ 		$('#order tr:gt(0)').each(function(){
+ 			if($(this).find('td:eq(0) input[type="checkbox"]').is(':checked')){
+ 				param={				//list格式
+ 						"id": $(this).find('td:eq(0) input[type="checkbox"]').val(),
+ 						"goods_id": $(this).find('td:eq(0) input[type="text"]').val(),
+ 						"order_id":orderId,
+ 						"goods_amount":$(this).find('td:eq(3) input[type="number"]').val(),
+ 						"goods_real_price":$(this).find('td:eq(4) input[type="text"]').val()
+ 				  };
+ 				list.push(param);
+ 			}
+ 		});
+ 		message ={
+				"itemList":list
+		};	
+ 		$.ajax({//给申请售后的商品的价格加负号
+            url: "/fresh/order_item/updateOrderItem.action",        //后台url
+            data:JSON.stringify(message),
+            type: "POST",                   //类型，POST或者GET
+            dataType: 'json',              //数据返回类型，可以是xml、json等
+            contentType:'application/json;charset=UTF-8',
+            success: function (data) {      //成功，回调函数
+            	 var reason = $('#reason').val();
+	       		 var handle_way = $('#handle_way').val();
+	       		 message={                          //数据
+       	                "after_sale": {
+       						"after_sale_id": "",
+       						"user_id":user.id,
+       						"a_order_id": orderId,
+       						"after_sale_reason": reason,
+       						"handle_status": 1,//提起申请
+       						"handle_way": handle_way,
+       						"handle_person": "",
+       						"handle_time": "",
+       						"prove_img": ""
+       					}
+       	             },
+       			 $.ajax({//添加售后
+       		             url: "/fresh/after_sale/addAfter_sale.action",        //后台url
+       		             data:JSON.stringify(message),
+       		             type: "POST",                   //类型，POST或者GET
+       		             dataType: 'json',              //数据返回类型，可以是xml、json等
+       		             contentType:'application/json;charset=UTF-8',
+       		             success: function (data) {      //成功，回调函数
+       		             	if(data.result==1){
+       		             		window.location.href="./userOrderList.html";
+       		             	}
+       		             },
+       		             error: function (er) {          //失败，回调函数
+       		                 alert(er);
+       		                 //previewer.preview();
+       		             }
+       		         });
+            },
+            error: function (er) {          //失败，回调函数
+                alert(er);
+                //previewer.preview();
+            }
+        });
+	}
 	function showMsg(type){//展示信息
 		if(type==1){//商品信息
-			document.getElementById("orderLog").style.display ="none";//日志信息不显示
-			document.getElementById("goodsDetail").style.display ="block";//商品信息显示
+			$('#orderLog').hide();//日志信息不显示
+			$('#goodsDetail').show();//商品信息显示
 		 	if(orderStatus==2){//确认订单详情页面
-            	//$('#confirm').attr("display","block");
-            	document.getElementById("confirm").style.display ="block";
+            	$('#confirm').show();
             }
 			if(orderStatus==3){//待发货订单详情
-				document.getElementById("pendingDetail").style.display ="block";
+				$('#pendingDetail').show();
 			}
-            if(orderStatus==4){//待收货订单详情页面。可以提交售后信息
-            	document.getElementById("afterSales").style.display ="block";
+            if(orderStatus==4){//待收货订单详情页面
+            	$('#confirmReceipt').show();
+            }
+            if(orderStatus==6&&bill==0){//已完成订单详情。可以提交售后信息    
+            	$('#afterSales').show();
             }
 		}else{
-			document.getElementById("goodsDetail").style.display ="none";//商品信息不显示
-			document.getElementById("orderLog").style.display ="block";
+			$('#goodsDetail').hide();
+			$('#orderLog').show();
 		}
 	}
 	function deleteGoods(goodsId){//删除一个购物项
@@ -382,9 +431,10 @@
   </div>
 </form>
   <p/><p/>
-  <div id="goodsDetail" style="display:none;"><b>订单商品信息:</b>
+  <div id="goodsDetail"><b>订单商品信息:</b>
     <table class="table table-hover text-center" id="order">
       <tr>
+      	<th></th>
         <th>品名</th>
         <th>单价</th>
         <th>数量</th>
@@ -408,14 +458,26 @@
  <div id="confirm" style="display:none;">
  	<input type="button" value="确认订单" onclick="confirmOrder()"/>
  </div>
+ <div id="confirmReceipt" style="display:none;">
+ 	<input type="button" onclick="confirmReceive()" value="确认收货"/>
+  </div>
   <div id="afterSales" style="display:none;">
   	<div>
   		<strong>
   			<b>申请售后原因：</b>
   		</strong>
   		<input type="textarea" value="" id="reason"></input>
+  		</p>
+  		<strong>
+  			<b>售后处理方式：</b>
+  		</strong>
+  		<select id="handle_way">
+  			<option value="1">开红字发票</option>
+  			<option value="2">补发</option>
+  		</select>
+  		</p>
   		<input type="button" onclick="updateAftersale()" value="提交"/>
-  		<input type="button" onclick="confirmReceive()" value="确认收货"/>
+  		
   	</div>
   	<div id="dealWith">
   	</div>
@@ -432,7 +494,7 @@
   	</div>
 </div>
 <p/><p/>
-<div id="orderLog" style="display=none;">
+<div id="orderLog">
 	<div><b>订单状态流转信息:</b></div>
 	<table class="table table-hover text-center" id="log">
       <tr>
